sanger/sites/oral-cavity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oral-cavity
spec:
  selector:
    matchLabels:
      app: oral-cavity
  replicas: 1
  template:
    metadata: 
      name: oral-cavity
      labels:
        app: oral-cavity
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: oral-cavity
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/oral-cavity/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oral-cavity-human
spec:
  selector:
    matchLabels:
      app: oral-cavity-human
  replicas: 1
  template:
    metadata: 
      name: oral-cavity-human
      labels:
        app: oral-cavity-human
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: oral-cavity-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: oral-cavity-human
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/pooled_human_gv_sg.processed.cellxgene.h5ad", "--title", "Oral Cavity Human", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "5Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oral-cavity-mouse
spec:
  selector:
    matchLabels:
      app: oral-cavity-mouse
  replicas: 1
  template:
    metadata: 
      name: oral-cavity-mouse
      labels:
        app: oral-cavity-mouse
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: oral-cavity-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.4
        imagePullPolicy: IfNotPresent
        name: oral-cavity-mouse
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/pooled_mouse.processed.cellxgene.h5ad", "--title", "Oral Cavity Mouse", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "5Gi"
            cpu: 1
---
