sanger/sites/oral-cavity/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: oral-cavity
spec:
  virtualhost:
    fqdn: oral-cavity.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: oral-cavity
          port: 80
    - match: /static
      services:
        - name: oral-cavity-human
          port: 80
    - match: /human
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-human
          port: 80
    - match: /mouse 
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-mouse
          port: 80
    - match: /human-gingival
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-human-gingival
          port: 80
    - match: /human-salivary
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-human-salivary
          port: 80
    - match: /mouse-tongue
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-mouse-tongue
          port: 80
    - match: /mouse-buccal-mucosa
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-mouse-buccal-mucosa
          port: 80
    - match: /mouse-parotid-gland
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-mouse-parotid-gland
          port: 80
    - match: /mouse-submandibular-gland
      prefixRewrite: "/" 
      services:
        - name: oral-cavity-mouse-submandibular-gland
          port: 80
---
